--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>m
+    <title>Document</title>
+    <style>
+        a{
+            width:300px;
+            height:200px;
+            position: relative;
+            top:50px;
+            text-align: center;
+            border:1px solid black;
+            background-color: aquamarine;
+            margin: 30px;
+        }
+    </style>
 </head>
 <body>
     <center>
